# rwatch

./: Cargo.toml  README.md  ROADMAP.md  TODO.md
.github/workflows/: rust.yml
src/: api.rs  cli.rs  event_record.rs  event_record_list.rs  main.rs  state.rs
src/utils/: events.rs  logs.rs  mod.rs
