[package]
name = "rwatch"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["json"]}
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["cargo"] }
inotify = "0.11.2"
regex = "1.13.1"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread"]}
